<?xml version="1.0"?>
<package format="3">
  <name>dingo_robot</name>
  <version>0.1.3</version>
  <description>Metapackage of software to install on Dingo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dingo_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
