<?xml version="1.0"?>
<package format="2">
  <name>dingo_tests</name>
  <version>0.1.0</version>
  <description>Test package for Dingo</description>

  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>Clearpath Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dingo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>dfu-util</exec_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc</doc_depend>

  <export>
  </export>
</package>